# AppReagent

./: .dockerignore  .gitignore  .mcp.json  .task.md  CMakeLists.txt  CPPLINT.cfg  Dockerfile.improve  Dockerfile.sandbox  LICENSE  Makefile  README.md  _config.yml  area.service  config.example.json  constitution.md  ddl.sql  index.html  iwyu.imp
.githooks/: post-commit
_layouts/: default.html
autoresearch/: evaluate.sh  program.md  ratchet.sh
bench/: eval.sh  judge.prompt  judge.py  program.md
include/: Agent.h  AnalyzeCommand.h  AreaServer.h  ArgParse.h  BackendPool.h  ClusterStatus.h  Database.h  Embedding.h  Harness.h  HeadlessTui.h  JobManager.h  JobQueue.h  McpServer.h  Sandbox.h  ScanCommand.h  ScanLog.h  ScanOutputFile.h  ScanState.h  ServerRunner.h  Tui.h  VtScreen.h  tui_util.h
prompts/: agent_system.prompt  analyze.prompt  analyze_finding_supervisor.prompt  analyze_finding_system.prompt  analyze_synthesis.prompt  analyze_synthesis_system.prompt  compress.prompt  deep_analysis.prompt  deep_analysis_supervisor.prompt  deep_analysis_system.prompt  elf_format_context.prompt  goal_expand.prompt  goal_expand_system.prompt  scan_synthesis.prompt  scan_synthesis_system.prompt  smali_format_context.prompt  synthesis.prompt  synthesis_supervisor.prompt  synthesis_system.prompt  triage.prompt  triage_supervisor.prompt  triage_system.prompt
public/: _config.yml
scripts/: agent-entrypoint.sh  build.sh  gen-compile-commands.sh  improve-prompt.md  lint-iwyu.sh  lint-no-comments.sh  post-commit-refresh.sh  setup-hooks.sh  test-pause-resume.sh  test-use-case.sh
src/: Agent.cpp  AnalyzeCommand.cpp  AreaServer.cpp  ArgParse.cpp  BackendPool.cpp  Config.cpp  Database.cpp  Embedding.cpp  Error.cpp  Harness.cpp  HeadlessTui.cpp  IPC.cpp  JobManager.cpp  JobQueue.cpp  LLMBackend.cpp  McpServer.cpp  Sandbox.cpp  ScanCommand.cpp  ScanLog.cpp  ScanOutputFile.cpp  ServerRunner.cpp  Tui.cpp  VtScreen.cpp  main.cpp
tests/: test_agent.cpp  test_argparse.cpp  test_classes_tool.cpp  test_config.cpp  test_dispatcher.cpp  test_e2e.cpp  test_elf_analysis.cpp  test_elf_disassembler.cpp  test_embedding.cpp  test_find_files_tool.cpp  test_ghidra_tool.cpp  test_graph_engine.cpp  test_grep_tool.cpp  test_llm_backend.cpp  test_llm_nodes.cpp  test_main_cli.cpp  test_manifest_tool.cpp  test_re_tools.cpp  test_util.cpp  (+8 more)
(+393 files in other folders)
